Fix mobile image and caption spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -444,14 +444,14 @@ article {
         /* margin-right: 0; Removed for not aligning photo on image to the right on mobile */
         max-width: 101vw;
         height: auto !important; /* Not restricting image height on mobile => 101vw, auto height */
-        padding-bottom: 10px; /* Add spacing for photography pages on mobile */
+        padding-bottom: 5px; /* Add spacing for photography pages on mobile */
         /* max-width: 103%; /* Magnify img to cover the RIGHT to create full bleed look */
         /* margin-left: -1.5%; /* Remove the LEFT table wrapper inner borderto create full bleed look */
     }
 
-    .post-content .photo.entry figcaption {
-        margin-top: -10px;
-    }
+    /* .post-content .photo.entry figcaption {
+        margin-top: -5px; /* Balance img padding-bottom; Unnecessary
+    } */
 
     #tintoretto {
         text-align: center;
